Fix math in eenheden_omzetten

--- a/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
@@ -67,7 +67,7 @@ Merk op: we maken gebruik van de [benaderingsregels](../benaderingsregels) in de
 | Van      | Naar       | Afleiding                                                                                                                     | Kort gezegd                | Voorbeeld                                                                                                                            |
 | -------- | ---------- | ----------------------------------------------------------------------------------------------------------------------------- | -------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
 | uur ($\si{h}$) | minuten ($\si{min}$) | /                                                                                                                             | $1 \si{ h} = 60 \si{ min}$ | $$\begin{aligned}8{,}00~\orange{\si{h}} &= 8{,}00 \cdot \orange{60~\si{min}}\\ &= 480~\orange{\si{min}} \end{aligned}$$          |
-| uur ($\si{h}$) | seconden ($\si{s}$)   | $$\begin{aligned}1 \si{ h} &= 60~\underbrace{\orange{\si{min}}}_{= 60~\si{s}}\\ &= \underbrace{60 \cdot \orange{60}}_{= 3600} ~\orange{\si{s}}\\ &= 3600~\orange{\si{s}}\end{aligned}$$ | $1 \si{ h} = 3600 \si{ s}$ | $$\begin{aligned}8{,}00\orange{\si{h}}}_{= 3600~\si{s}} &= 8{,}00 \cdot~\orange{3600 \si{s}} \\ &= 28{,}8 \cdot 10^{3}~\orange{\si{s}} \end{aligned}$$ |
+| uur ($\si{h}$) | seconden ($\si{s}$)   | $$\begin{aligned}1 \si{ h} &= 60~\underbrace{\orange{\si{min}}}_{= 60~\si{s}}\\ &= \underbrace{60 \cdot \orange{60}}_{= 3600} ~\orange{\si{s}}\\ &= 3600~\orange{\si{s}}\end{aligned}$$ | $1 \si{ h} = 3600 \si{ s}$ | $$\begin{aligned}8{,}00~\orange{\si{h}} &= 8{,}00 \cdot~\orange{3600~\si{s}} \\ &= 28{,}8 \cdot 10^{3}~\orange{\si{s}} \end{aligned}$$ |
 
 ### Van minuut naar...
 
