CFix machten link in machten_van_10

--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -36,7 +36,7 @@ $$
 
 
 Extra uitleg vind je in de les over [rekenen met
-machten](../../../wiskunde/rekenen_rationaal/machten/#producten-van-machten).
+machten](/lessen/wiskunde/eentermen/product/).
 
 ## Machten van 10 uitrekenen
 
