--- a/src/content/lessen/wiskunde/logaritmen/rekenregels/index.mdx
+++ b/src/content/lessen/wiskunde/logaritmen/rekenregels/index.mdx
@@ -17,7 +17,7 @@ $$
 x^4 + 4x^3 - 2x + 6
 $$
 
-Net zoals er geen rekenregel bestaat voor de som of het verschil van machten, bestaat er ook **geen rekenregel voor de som of het verschil van een logaritme**.
+Net zoals er geen rekenregel bestaat voor de som of het verschil van machten, bestaat er ook **geen rekenregel voor de logaritmen van een som of verschil**.
 
 $\log (5x + 3)$ kunnen we dus **niet verder oplossen**. We kunnen dit met andere woorden **niet** schrijven als $\red{\log 5x + \log 3}$. ❌
 > Weet je nog dat bovenstaand logaritme een **tiendelige <Mute text="of Briggse"/> logaritme** is? 🤔 Zo neen, bekijk dan nog even [de eerste les over logaritmen](../logaritme). 🙌
