Use int for level in frontmatter

--- a/src/content/lessen/fysica/beweging/_index.mdx
+++ b/src/content/lessen/fysica/beweging/_index.mdx
@@ -3,8 +3,7 @@ title: "Bewegingen"
 date: 2020-09-19T07:56:38+01:00
 weight: 4
 tags: []
-level: "6e middelbaar"
-course: "fysica"
+level: 6
 topic: "kinematica"
 image: beweging/img/beweging_rust.png
 ---
