--- a/src/content/lessen/fysica/grootheden_eenheden/_index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/_index.mdx
@@ -2,14 +2,9 @@
 title: "Grootheden en eenheden"
 date: 2019-01-28T07:56:38+01:00
 weight: 1
-draft: false
-section_color: "#00449e"
 tags: []
-categories: []
-level: "3e middelbaar"
-course: ""
+level: 3
 topic: "grootheden en eenheden"
-images: []
 image: benaderingsregels/img/lego_meetlat.png
 ---
 
