--- a/src/content/lessen/fysica/lichtstralen/_index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/_index.mdx
@@ -2,13 +2,8 @@
 title: "Lichtstralen"
 date: 2019-01-28T08:57:48+01:00
 weight: 2
-section_color: "#ff6300"
-draft: false
 tags: ["lichtstralen"]
-categories: []
-level: "3e middelbaar"
-course: ""
+level: 3
 topic: "optica"
-images: []
 image: intro/img/mosaic.png
 ---
