--- a/src/content/lessen/wiskunde/1g_vgl/_index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/_index.mdx
@@ -1,9 +1,6 @@
 ---
 title: "Vergelijkingen van de eerste graad in x"
-section_color: "#00449e"
 weight: 5
-level: "2e middelbaar"
+level: 2
 topic: "algebra"
-images: []
-title_img: ""
 ---
