--- a/src/content/lessen/wiskunde/eentermen/_index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/_index.mdx
@@ -2,12 +2,7 @@
 title: "Eentermen"
 date: 2020-01-09T07:00:10+01:00
 weight: 7
-draft: false
-section_color: "#00449e"
-level: "2e middelbaar"
-course: "wiskunde"
-topic: "algebra"
-images: []
+level: 2
 image: variabelen/img/living_no_dims.png
 ---
 
