--- a/src/content/lessen/wiskunde/functies/_index.mdx
+++ b/src/content/lessen/wiskunde/functies/_index.mdx
@@ -1,9 +1,7 @@
 ---
 title: "Functies"
-section_color: "#19a974"
 weight: 4
-level: "3e middelbaar"
+level: 3
 topic: "analyse"
-images: []
 image: domein_beeld/plt/fx.png
 ---
