--- a/src/content/lessen/wiskunde/logaritmen/_index.mdx
+++ b/src/content/lessen/wiskunde/logaritmen/_index.mdx
@@ -2,10 +2,6 @@
 title: "Logaritmen"
 date: 2020-09-06T18:00:00+02:00
 weight: 9
-draft: false
-section_color: "#00449E"
-level: "5e middelbaar"
-course: "wiskunde"
+level: 5
 topic: "algebra"
-images: []
 ---
