--- a/src/content/lessen/wiskunde/rekenen_rationaal/_index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/_index.mdx
@@ -3,8 +3,7 @@ title: "Rekenen met rationale getallen"
 date: 2019-01-06T11:05:48+01:00
 weight: 1
 tags: []
-level: "1e middelbaar"
-course: ""
+level: 1
 topic: "algebra"
 image: breuken/img/pizza.png
 ---
