--- a/src/content/lessen/wiskunde/vector_1/_index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/_index.mdx
@@ -1,9 +1,7 @@
 ---
 title: "Vectoren"
-section_color: "#00449e"
 weight: 6
-level: "3e middelbaar"
+level: 3
 topic: "algebra"
-images: []
 image: ./intro/img/vector_is_arrow.png
 ---
