--- a/src/content/lessen/wiskunde/veeltermen/_index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/_index.mdx
@@ -2,12 +2,7 @@
 title: "Veeltermen"
 date: 2019-01-05T21:28:11+01:00
 weight: 3
-draft: false
-section_color: "#00449e"
-level: "3e middelbaar"
-course: "wiskunde"
+level: 3
 topic: "algebra"
-images: []
-title_img: ""
 ---
 
