--- a/src/content/lessen/wiskunde/verzamelingen/_index.mdx
+++ b/src/content/lessen/wiskunde/verzamelingen/_index.mdx
@@ -2,14 +2,8 @@
 title: "Verzamelingen"
 date: 2019-01-05T21:27:16+01:00
 weight: 2
-draft: False
 tags: []
-categories: []
-section_color: "#ff6300"
-level: "1e middelbaar"
-course: ""
+level: 1
 topic: "verzamelingen"
-images: []
-title_img: ""
 ---
 
