--- a/src/content/lessen/fysica/krachten_1/_index.mdx
+++ b/src/content/lessen/fysica/krachten_1/_index.mdx
@@ -3,8 +3,7 @@ title: "Krachten"
 date: 2019-05-24T10:46:07+02:00
 weight: 3
 tags: ["kracht", "Newton"]
-level: "3e middelbaar"
-course: "fysica"
+level: 3
 topic: "dynamica"
 image: intro/img/kracht_effecten.png
 ---
