--- a/src/content/lessen/wiskunde/afgeleiden_1/_index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/_index.mdx
@@ -2,11 +2,7 @@
 title: "Afgeleiden"
 date: 2020-03-10T16:19:25+01:00
 weight: 8
-draft: false
-section_color: "#19a974"
-level: "5e middelbaar"
-course: "wiskunde"
+level: 5
 topic: "analyse"
-images: []
 image: differentiequotient/img/drag_racing.png
 ---
