--- a/src/content/lessen/wiskunde/meetkunde_1/_index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/_index.mdx
@@ -2,10 +2,7 @@
 title: "Rechten, hoeken en (ruimte)figuren"
 date: 2020-08-05T16:17:25+02:00
 weight: 3
-draft: false
-section_color: "#ff6300"
-level: "1e middelbaar"
-course: "wiskunde"
+level: 1
 topic: "meetkunde"
 image: ./figuren/img/2d_3d.png
 ---
