Rewrite rekenen_rationaal/machten

--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -21,7 +21,7 @@ $$
 
 Waarbij $z$ staat voor de lengte van de ribbe van de kubus.
 
-Die formules zouden we graag korter willen kunnen schrijven. Dat kunnen we met behulp van een **machtsverheffing**.
+Die formules zouden we graag korter schrijven. Dat kunnen we met behulp van een **machtsverheffing**.
 
 ## Een machtsverheffing bestaat uit een grondtal en een exponent
 
@@ -49,7 +49,7 @@ $$
 a^n 
 $$
 
-Waarbij $a$ het grondtal is en $n$ de exponent of de macht. Dit lees je als **$a$ tot de $n-$de macht**, of korter **$a$ tot de $n-$de**:
+Waarbij $a$ het grondtal is en $n$ de exponent (of de macht). Dit lees je als **$a$ tot de $n-$de macht**, of korter **$a$ tot de $n-$de**:
 
 | Je schrijft | Je leest het als |
 |-------------|------------------|
@@ -57,7 +57,7 @@ Waarbij $a$ het grondtal is en $n$ de exponent of de macht. Dit lees je als **$a
 | $3^3$       | drie tot de derde |
 | $5^1$       | vijf tot de eerste |
 | $(-7)^4$       | min zeven tot de vierde |
-| $\big(-\frac{1}{6}\big)^2$       | min één zesde tot de tweede |
+| $\left(-\frac{1}{6}\right)^2$       | min één zesde tot de tweede |
 
 Wanneer een machtsverheffing een **exponent gelijk aan $2$** heeft, noemen we die machtsverheffing een **kwadraat** <Mute>(van het Latijnse *quadratum*, wat "vierkant" betekent, denk maar aan $\si{m}^2$: *vierkante* meter)</Mute>:
 
@@ -66,11 +66,13 @@ Wanneer een machtsverheffing een **exponent gelijk aan $2$** heeft, noemen we di
 | $a^2$       | $a$ kwadraat  |
 | $3^2$     |  drie kwadraat  |
 | $7^2$    | zeven kwadraat  |
-| $\big(-\frac{1}{6}\big)^2$       | min één zesde kwadraat |
+| $\left(-\frac{1}{6}\right)^2$       | min één zesde kwadraat |
 
-We gaan het voorlopig houden op machten waarbij het **grondtal een rationaal getal** is <Mute>(bv. $2$, $\frac{3}{4}$ of $-\frac{7}{5}$)</Mute> en de **exponent een geheel getal**. Een gehele exponent betekent dus dat de exponent bv. $1$, $2$ of $3$ zou kunnen zijn, maar ook bijvoorbeeld $0$ of zelfs $-1$ of $-2$. In de volgende paragraaf gaan we het eenvoudigste geval uitleggen: dat de exponent een **strikt positief geheel getal** is <Mute>(dus bv. $1$ of $2$, maar niet $0$ of $-1$)</Mute>. In de paragrafen nadien leggen we uit wat er gebeurt wanneer de exponent $0$ is of negatief.
+We gaan het voorlopig houden op machten waarbij het **grondtal een rationaal getal** is <Mute>(bv. $2$, $\frac{3}{4}$ of $-\frac{7}{5}$ en **niet** bv. $\sqrt{2}$ of $\pi$)</Mute> en de **exponent een geheel getal**. Een gehele exponent betekent dus dat de exponent bv. $1$, $2$ of $3$ zou kunnen zijn, maar ook bijvoorbeeld $0$ of zelfs $-1$ of $-2$, maar **niet** $\frac{2}{3}$.
 
-## Strikt positieve gehele exponent
+In de volgende paragraaf gaan we het eenvoudigste geval uitleggen: dat de exponent een **strikt positief geheel getal** is <Mute>(dus bv. $1$ of $2$, maar niet $0$ of $-1$)</Mute>. In de paragrafen nadien leggen we uit wat er gebeurt wanneer de exponent $0$ is of negatief.
+
+## Machten met een positieve exponent
 
 We leerden al dat we met behulp van een machtsverheffing de vermenigvuldiging $5\cdot 5 \cdot 5$ korter konden schrijven als $5^3$. Wanneer $n > 0$ (bv. $1$, $2$, $3$,...), kan je $a^n$ uitrekenen door $a$ **met zichzelf te vermenigvuldigen tot je in totaal $n$ factoren hebt**:
 
@@ -82,10 +84,13 @@ Enkele voorbeelden:
 
 $$
 \begin{aligned}
-3^\orange{2} &= \underbrace{3 \cdot 3}_{\orange{2}~\text{dezelfde factoren}}\\
-(-2)^\orange{5} &= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)\cdot (-2)}_{\orange{5}~\text{dezelfde factoren}}\\
-\big(\frac{7}{3}\big)^\orange{4} &= \underbrace{\big(\frac{7}{3}\big) \cdot \big(\frac{7}{3}\big) \cdot \big(\frac{7}{3}\big) \cdot \big(\frac{7}{3}\big)}_{\orange{4}~\text{dezelfde factoren}}\\
-\big(-\frac{2}{3}\big)^\orange{1} &= \underbrace{\big(-\frac{2}{3}\big)}_{\orange{1}~\text{dezelfde factor}}\\
+3^\orange{3} &= \underbrace{3 \cdot 3\cdot 3}_{\orange{3}~\text{dezelfde factoren}} = 27\\
+\\
+(-2)^\orange{5} &= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)\cdot (-2)}_{\orange{5}~\text{dezelfde factoren}} = - 32\\
+\\
+\left(\frac{7}{3}\right)^\orange{2} &= \underbrace{\left(\frac{7}{3}\right) \cdot \left(\frac{7}{3}\right)}_{\orange{2}~\text{dezelfde factoren}} = \frac{49}{9}\\
+\\
+\left(-\frac{2}{3}\right)^\orange{1} &= \underbrace{\left(-\frac{2}{3}\right)}_{\orange{1}~\text{dezelfde factor}}\\
 \end{aligned}
 $$
 
@@ -94,8 +99,10 @@ Merk op dat $a^1 = a$. Dat valt te verwachten aangezien we maar één keer de fa
 $$
 \begin{aligned}
 2^\orange{1} &= \underbrace{2}_{\orange{1}~\text{dezelfde factor}}\\
+\\
 4^\orange{1} &= \underbrace{4}_{\orange{1}~\text{dezelfde factor}}\\
-\big(-\frac{4}{5}\big)^\orange{1} &= \underbrace{\big(-\frac{4}{5}\big)}_{\orange{1}~\text{dezelfde factor}}\\
+\\
+\left(-\frac{4}{5}\right)^\orange{1} &= \underbrace{\left(-\frac{4}{5}\right)}_{\orange{1}~\text{dezelfde factor}}\\
 \end{aligned}
 $$
 
@@ -106,9 +113,12 @@ Oké, en wat nu als $n = 0$? Wel, **we spreken af dat $a^0 = 1$** <Mute>(met $a\
 $$
 \begin{aligned}
 2^\orange{0} &= 1\\
+\\
 (-4)^\orange{0} &= 1\\
-\big(-\frac{9}{11}\big)^\orange{0} &= 1\\
-\big(\frac{2}{3}\big)}^0 &= 1
+\\
+\left(-\frac{9}{11}\right)^\orange{0} &= 1\\
+\\
+\left(\frac{2}{3}\right)^\orange{0} &= 1
 \end{aligned}
 $$
 
@@ -116,112 +126,300 @@ $$
 
 $a^0 = 1$ is enkel voor $a\in \mathbb{Q}_0$. Wanneer $a = 0$ en we dus $0^0$ moeten uitrekenen, is de uitkomst **niet gedefinieerd**!
 
+Moest je dit tegenkomen in een vraag, mag je het volgende schrijven:
+
+$0^0 \notin \mathbb{Q}$
+
 $0^0$ is er eentje van dezelfde familie als $\frac{0}{0}$, wat ook niet gedefinieerd is.
 
 </Attention>
 
 <Expand title="Waarom is $a^0 = 1$?">
 
-Zoals we hierboven zeiden, is het een **afspraak** dat $a^0 = 1$. Dat is een **keuze** waar de meeste wiskundigen het mee eens zullen zijn. Hieronder leggen we uit waarom dat een logische keuze is.
-
 Om de uitleg te kunnen begrijpen, hebben we iets nodig wat we pas later in deze les zullen zien, namelijk machten met tegengestelde exponenten. We zullen daar leren dat machtsverheffingen met **tegengestelde exponent elkaars omgekeerde zijn**, dus dat:
 
 $$
-a^{-c} = \frac{1}{a^c}
+a^{-n} = \frac{1}{a^n}
 $$
 
-Stel nu dat we $a^c \cdot a^{-c}$ willen berekenen (waarbij $a \in \mathbb{Q}_0$). Dat kunnen we dan als volgt doen:
+Stel nu dat we $a^n \cdot a^{-n}$ willen berekenen (waarbij $a \in \mathbb{Q}_0$). Dat kunnen we dan als volgt doen:
 
 $$
 \begin{aligned}
-a^c \cdot \underbrace{a^{-c}}_{= \frac{1}{a^c}} &= a^c \cdot \frac{1}{a^c}\\
-&= \frac{a^c}{a^c}\\
+a^n \cdot \underbrace{a^{-n}}_{= \frac{1}{a^n}} &= a^n \cdot \frac{1}{a^n}\\
+&= \frac{a^n}{a^n}\\
 &= 1
 \end{aligned}
 $$
 
-We vinden dat $a^c \cdot a^{-c} = 1$.
+We vinden dat $a^n \cdot a^{-n} = 1$.
 
-Een belangrijke rekenregel van machten zegt echter dat het **product van machten met hetzelfde grondtal** gelijk is aan een macht met als grondtal datzelfde grondtal en als exponent de **som van de oude exponenten**. In symbolen:
+Een belangrijke rekenregel van machten zegt echter dat het **product van machten met hetzelfde grondtal** gelijk is aan de macht met als grondtal datzelfde grondtal en als exponent de **som van de oude exponenten** <Mute>(zie ook onze les over het [vermenigvuldigen van eentermen](../../eentermen/product))</Mute>. In symbolen:
 
 $$
-a^b \cdot a^c = a^{b + c}
+a^n \cdot a^m = a^{n + m}
 $$
 
-Als we ervan uitgaan dat we die rekenregel ook mogen toepassen bij negatieve machten, dan kunnen we $a^c \cdot a^{-c}$ ook als volgt uitrekenen:
+Als we ervan uitgaan dat we die rekenregel ook mogen toepassen bij negatieve machten, dan kunnen we $a^n \cdot a^{-n}$ ook als volgt uitrekenen:
 
 $$
 \begin{aligned}
-a^c \cdot a^{-c} &= a^{c - c}\\
+a^n \cdot a^{-n} &= a^{n + (-n)}\\
+&= a^{n - n}\\
 &= a^0
 \end{aligned}
 $$
 
-We vinden dat $a^c \cdot a^{-c} = a^0$. Vorige keer vonden we echter dat $a^c \cdot a^{-c} = 1$. Als we ervan uitgaan dat de rekenregel $a^b \cdot a^c = a^{b + c}$ algemeen toepasbaar is op machten, volgt daaruit dus dat $a^0 = 1$!
+We vinden dat $a^n \cdot a^{-n} = a^0$. Vorige keer vonden we echter dat $a^n \cdot a^{-n} = 1$. Als we ervan uitgaan dat de rekenregel $a^n \cdot a^m = a^{n + m}$ algemeen toepasbaar is op machten, volgt daaruit dus dat $a^0 = 1$!
 
 </Expand>
 
 
-## Machten met een negatief grondtal
-$$
- 2\orange{^4}= \underbrace{2 \cdot 2 \cdot 2 \cdot 2}_{\orange{4}~\text{factoren}} = 16
-$$
+## Machten met een negatieve exponent
 
-$$
- -2\orange{^4}= \underbrace{(-2) \cdot (-2) \cdot (-2) \cdot (-2)}_{\orange{4}~\text{factoren}} = 16
-$$
-
-Het lijkt op het eerste zicht misschien vreemd dat $2^4$ en $(-2)^4$ dezelfde uitkomst hebben, maar als je dit stap voor stap uitwerkt zie je waarom 💪.
+De exponent kan bij een machtsverheffing niet enkel positief of nul zijn, maar kan ook **negatief** zijn. Hoe we een negatieve macht kunnen berekenen, ontdekken we door naar enkele voorbeelden te kijken:
 
 $$
 \begin{aligned}
-(-2)^4 &= \underbrace{(-2) \cdot (-2)}_{= \orange{4}} \cdot (-2) \cdot (-2) \\
-(-2)^4 &= \orange{4} \cdot \underbrace{(-2) \cdot (-2)}_{= \blue{4}} \\ 
-(-2)^4 &= \orange{4} \cdot \blue{4} \\
-(-2)^4 &= 16
+\left(\frac{5}{4}\right)^{-2} &= \left(\frac{4}{5}\right)^{2}\\
+\left(-\frac{11}{8}\right)^{-3} &= \left(-\frac{8}{11}\right)^{3}\\
+\left(\frac{2}{3}\right)^{-5} &= \left(\frac{3}{2}\right)^{5}\\
+\left(-\frac{6}{7}\right)^{-3} &= \left(-\frac{7}{6}\right)^{3}\\
 \end{aligned}
 $$
 
-Probeer nu zelf eens de uitkomst van $(-2)^3$ te bepalen. Is dit $8$ of $-8$? 🧐
-
-Om te bepalen of een uitkomst positief of negatief is, tel je het *aantal mintekens* dat je hebt als je de macht zou uitschrijven. 
-Is het aantal **even**, dan is de uitkomst **positief**. Is het aantal **oneven**, dan is de uitkomst **negatief**.
-
-## Machten van breuken en kommagetallen
-Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**. Een macht is machtig genoeg om beide getallen te *bewerken*. 👑
+Je ziet dat **machten met tegengestelde exponenten elkaars omgekeerde** zijn. In symbolen:
 
 $$
-\left( \frac{3}{4} \right)^2 = \frac{3^2}{4^2} = \frac{9}{16}
+\left(\frac{a}{b}\right)^{-n} = \left(\frac{b}{a}\right)^n
 $$
 
-In symbolen:
+Waarbij $a, b\in\mathbb{Q}_0$ <Mute>(zonder nul, want anders zou er een nul in de noemer terecht komen)</Mute>.
+
+Wat dan als we een negatieve exponent hebben bij een **grondtal dat geen breuk** is? Wel, we kunnen het grondtal altijd op een **noemer $1$** zetten! Enkele voorbeelden:
 
 $$
-\left( \frac{a}{b} \right)^n = \frac{a^n}{b^n}
+\begin{aligned}
+2^{-1} &= \left(\frac{2}{1}\right)^{-1}\\
+&= \left(\frac{1}{2}\right)^1\\
+&= \frac{1}{2}\\
+\\
+10^{-3} &= \left(\frac{10}{1}\right)^{-3}\\
+&= \left(\frac{1}{10}\right)^3\\
+&= \frac{1}{10}\cdot\frac{1}{10}\cdot\frac{1}{10}\\
+&= \frac{1}{10^3}\\
+\\
+(-3)^{-2} &= \left(\frac{-3}{1}\right)^{-2}\\
+&= \left(\frac{1}{-3}\right)^2\\
+&= \left(\frac{1}{-3}\right) \cdot \left(\frac{1}{-3}\right)\\
+&= \frac{1}{(-3)^2}
+\end{aligned}
 $$
 
-Om een **macht van een kommagetal** te berekenen, passen we wederom het **trucje** toe waarbij we de komma wegdenken. 🧙‍♂️
-
-Eerst bereken je het **resultaat zonder komma** en vervolgens bepaal je de **plaats van de komma**. Dit doe je door de **exponent** te **vermenigvuldigen** met het **oorspronkelijk aantal cijfers na de komma**.
+Je ziet dat we in de laatste stap altijd uitkomen op iets van de vorm $\frac{1}{a^n}$. In het algemeen geldt:
 
 $$
-0.12^2 \rightarrow 12^2 = 144 \rightarrow 0.0144
+a^{-n} = \frac{1}{a^n}
+$$
+
+Daarbij is $a\in\mathbb{Q}_0$ en $n\in\mathbb{Z}$. Ook hier weer mag $a$ **niet gelijk zijn aan nul**, omdat we dan rechts van het gelijkteken nul in de noemer van de breuk zouden hebben.
+
+## Het teken bepalen van de uitkomst van een macht
+
+De uitkomst van een **machtsverheffing kan zowel positief als negatief** zijn. Aan de hand van enkele voorbeelden gaan we eens kijken of we een rekenregel kunnen ontdekken waarmee we **snel het teken van de uitkomst kunnen bepalen**.
+
+We beginnen met enkele machten met een positief grondtal $3$:
+
+$$
+\begin{aligned}
+3^4 &= 3\cdot 3\cdot 3\cdot 3 &= \green{81}\\
+3^3 &= 3\cdot 3\cdot 3 &= \green{27}\\
+3^2 &= 3\cdot 3 &= \green{9}\\
+3^1 &= 3 &= \green{3}\\
+3^0 &= 1 &= \green{1}\\
+3^{-1} &= \frac{1}{3^1} &= \green{\frac{1}{3}}\\
+3^{-2} &= \frac{1}{3^2} &= \green{\frac{1}{9}}\\
+3^{-3} &= \frac{1}{3^3} &= \green{\frac{1}{27}}\\
+3^{-4} &= \frac{1}{3^4} &= \green{\frac{1}{81}}\\
+\end{aligned}
+$$
+
+Je kan dit zelf ook eens voor andere positieve grondtallen uitproberen en zal zien dat de uitkomst altijd positief is. Inderdaad, een **positief grondtal zorgt voor een positieve uitkomst**.
+
+Maar wat nu als we een **negatief grondtal** hebben, bv. $-3$? Laten we eens kijken:
+
+$$
+\begin{aligned}
+(-3)^4 &= (-3)\cdot (-3)\cdot (-3)\cdot (-3) &= \green{81}\\
+(-3)^3 &= (-3)\cdot (-3)\cdot (-3) &= \red{-27}\\
+(-3)^2 &= (-3)\cdot (-3) &= \green{9}\\
+(-3)^1 &= (-3) &= \red{-3}\\
+(-3)^0 & &= \green{1}\\
+(-3)^{-1} &= \frac{1}{(-3)^1} &= \red{\frac{1}{-3}}\\
+(-3)^{-2} &= \frac{1}{(-3)^2} &= \green{\frac{1}{9}}\\
+(-3)^{-3} &= \frac{1}{(-3)^3} &= \red{\frac{1}{-27}}\\
+(-3)^{-4} &= \frac{1}{(-3)^4} &= \green{\frac{1}{81}}\\
+\end{aligned}
+$$
+
+
+Zie je het patroon? Wanneer ons grondtal negatief is, dan is de **uitkomst positief bij een even exponent** <Mute>(mag ook **negatief even** zijn, bv. $\ldots^{-4}$)</Mute>. De **uitkomst is negatief bij een oneven exponent** <Mute>(mag ook **negatief oneven** zijn, bv. $\ldots^{-3}$)</Mute>.
+
+Waarom is dat nu zo? Wel dat heeft te maken met de rekenregel voor het vermenigvuldigen van negatieve getallen. Die zegt dat **min maal min, plus is** en dat **plus maal min, min is**. Bij $(-3)^2$, doen we min maal min, dus is de uitkomst positief:
+
+$$
+\begin{aligned}
+(-3)^2 &= \underbrace{(-3)\cdot (-3)}_{\text{min maal min}}\\
+&= \underbrace{\green{9}}_{\text{plus}}
+\end{aligned}
+$$
+
+Wanneer we dat nog eens maal $(-3)$ doen om zo $(-3)^3$ te berekenen, doen we dus eigenlijk *plus maal min*, en krijgen we terug **min**:
+
+$$
+\begin{aligned}
+(-3)^3 &= \underbrace{(-3)\cdot (-3)}_{= \green{9}} \cdot (-3)\\
+&= \underbrace{\green{9} \cdot (-3)}_{\text{plus maal min}}\\
+&= \underbrace{\red{- 27}}_{\text{min}}
+\end{aligned}
+$$
+
+Wanneer we dit een **vierde keer** vermenigvuldigen met $(-3)$, krijgen we dan terug **plus**:
+
+$$
+\begin{aligned}
+(-3)^4 &= \underbrace{(-3)\cdot (-3)\cdot (-3)}_{= \red{-27}} \cdot (-3)\\
+&= \underbrace{\red{-27} \cdot (-3)}_{\text{min maal min}}\\
+&= \underbrace{\green{81}}_{\text{plus}}
+\end{aligned}
+$$
+
+Wanneer ons **grondtal negatief** is, zorgt een **even exponent** ervoor dat de uitkomst **positief** zal zijn. Bij **oneven exponenten**, daarentegen, zal de uitkomst altijd **negatief** zijn.
+
+
+## Machten van breuken
+
+In de voorgaande voorbeelden rekenden we de macht van een breuk uit door gewoon de definitie van een macht toe te passen en de breuk een bepaald aantal keer met zichzelf te vermenigvuldigen. Als we enkele voorbeelden bekijken, gaat het ons echter opvallen dat dit ook sneller kan:
+
+$$
+\begin{aligned}
+\left(\frac{1}{2}\right)^3 &= \frac{1}{2}\cdot \frac{1}{2} \cdot \frac{1}{2}\\
+&= \frac{1\cdot 1\cdot 1}{2\cdot 2\cdot 2}\\
+&= \frac{1^3}{2^3}\\
+&= \frac{1}{8}\\
+\\
+\left(-\frac{3}{5}\right)^2 &= \left(-\frac{3}{5}\right)\cdot \left(-\frac{3}{5}\right)\\
+&= \frac{(-3) \cdot (-3)}{5\cdot 5}\\
+&= \frac{(-3)^2}{5^2}\\
+&= \frac{9}{25}\\
+\\
+\left(\frac{4}{3}\right)^4 &= \frac{4}{3}\cdot \frac{4}{3}\cdot \frac{4}{3}\cdot \frac{4}{3}\\
+&= \frac{4 \cdot 4\cdot 4\cdot 4}{3\cdot 3\cdot 3\cdot 3}\\
+&= \frac{4^4}{3^4}\\
+&= \frac{256}{81}\\
+\end{aligned}
+$$
+
+Je ziet dat we telkens uitkomen op een breuk waarbij **dezelfde exponent bij teller en noemer apart staat**. In symbolen:
+
+$$
+\left(\frac{a}{b}\right)^n = \frac{a^n}{b^n}
+$$
+
+Waarbij $a,b\in\mathbb{Q}_0,~n\in\mathbb{Z}$.
+
+In het geval van een exponent met een minteken, is het het eenvoudigste om **eerst de breuk om te keren** waardoor het minteken in de exponent wegvalt en vervolgens de macht van teller en noemer uit te rekenen:
+
+$$
+\left(\frac{a}{b}\right)^{-n} = \left(\frac{b}{a}\right)^n = \frac{b^n}{a^n}
+$$
+
+Enkele extra voorbeelden:
+
+$$
+\begin{aligned}
+\left(\frac{3}{2}\right)^{-3}
+&= \left(\frac{2}{3}\right)^{3}\\
+&= \frac{2^3}{3^3}\\
+&= \frac{8}{27}\\
+\\
+\left(-\frac{5}{7}\right)^{-2}
+&= \left(\frac{7}{(-5)}\right)^{2}\\
+&= \frac{7^2}{(-5)^2}\\
+&= \frac{49}{25}\\
+\\
+\left(-\frac{1}{2}\right)^{-5}
+&= \left(\frac{2}{(-1)}\right)^{5}\\
+&= \frac{2^5}{(-1)^5}\\
+&= \frac{32}{-1}\\
+&= -32
+\end{aligned}
+$$
+
+## Machten van kommagetallen
+
+Een kommagetal dat een eindig aantal decimalen heeft <Mute>(of een oneindig aantal met een bepaalde regelmaat)</Mute>, kan altijd herschreven worden als een breuk van gehele getallen. Je kan de macht van een kommagetal dus uitrekenen door het **kommagetal te herschrijven als een breuk** en vervolgens de macht van de breuk uit te rekenen (zie vorige paragraaf).
+
+> Lees zeker onze les nog eens na over [hoe je een kommagetal kan omzetten naar een breuk](../komma_naar_breuk)!
+
+Enkele voorbeelden:
+
+$$
+\begin{aligned}
+0{,}12^2 &= \left(\frac{12}{100}\right)^2\\
+&= \frac{12^2}{100^2}\\
+&= \frac{144}{10~000}\\
+&= 0{,}0144
+\\
+(-1{,}66\ldots)^3 &= \left(-\frac{5}{3}\right)^3\\
+&= \frac{(-5)^3}{3^3}\\
+&= \frac{-125}{27}\\
+&= -4{,}629629\ldots
+\\
+(-1{,}5)^4 &= \left(-\frac{3}{2}\right)^4\\
+&= \frac{(-3)^4}{2^4}\\
+&= \frac{81}{16}\\
+&= 5{,}0625
+\end{aligned}
 $$
 
 ## Samengevat
 <Attention title="Een macht berekenen">
 
-Algemeen geldt dat een macht met grondtal $a$ en exponent $n$ gelijk is aan:
+Algemeen geldt dat een machtsverheffing met grondtal $a$ en exponent $n$ gelijk is aan:
 
 $$
- \underbrace{a \cdot a \cdot ... \cdot a}_{n~\text{ factoren}} = a^n 
+a^n = \underbrace{a \cdot a \cdot ... \cdot a}_{n~\text{factoren}}
 $$
 
-Om te bepalen of een uitkomst positief of negatief is, tel je het *aantal mintekens*. Is het aantal **even**, dan is de uitkomst **positief**.
-Is het aantal **oneven**, dan is de uitkomst **negatief**.
+Waarbij $a\in \mathbb{Q}$ en $n\in\mathbb{Z}$.
+
+Daarenboven zeggen we dat:
+
+$$
+a^0 = 1
+$$
+
+En dat:
+
+$$
+a^{-n} = \frac{1}{a^n}
+$$
+
+Waarbij $a\neq 0$.
+
 </Attention>
 
-<Attention title="Macht van een breuk of kommagetal">
+<Attention title="Teken van de uitkomst van een machtsverheffing">
+
+* De uitkomst van een machtsverheffing met een **positief grondtal** is **altijd positief**.
+* De uitkomst van een machtsverheffing met een **negatief grondtal** is **positief wanneer de exponent even** is en is **negatief wanneer de exponent oneven** is.
+
+Merk op dat we met "even" ook "negatief even" exponenten bedoelen, zoals $\ldots^{-2}$ en $\ldots^{-4}$. Met "oneven" bedoelen we ook "negatief oneven" exponenten zoals $\ldots^{-1}$ en $\ldots^{-3}$.
+
+</Attention>
+
+<Attention title="Macht van een breuk">
 
 Om de **macht van een breuk** te berekenen, verhef je **teller en noemer tot de macht**.
 
@@ -230,19 +428,14 @@ $$
 \left( \frac{a}{b} \right)^n = \frac{a^n}{b^n}
 $$
 
-Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
-1. Je berekent het **resultaat zonder komma** (je denkt de komma weg)
-2. Je bepaalt het aantal cijfers na de komma door de **exponent** te **vermenigvuldigen** met het **oorspronkelijk aantal cijfers na de komma**
-
 </Attention>
 
-<Attention title="Speciale machten">
+<Attention title="Macht van een kommagetal"> 
 
-$$
- a^0 = 1
-$$
-$$
- a^1 = a
-$$
+Om een **macht van een kommagetal** te berekenen, ga je als volgt te werk:
+
+1. Zet het kommagetal om naar een breuk.
+2. Bereken de macht van de breuk <Mute>(verhef dus teller en noemer tot de macht)</Mute>.
+3. Zet, indien gevraagd, de bekomen breuk terug om naar een kommagetal.
 
 </Attention>
